--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka-android'
@@ -27,7 +26,11 @@ android {
     lintOptions {
         abortOnError false
     }
-
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += "src/androidTest/kotlin"
+    }
     android.libraryVariants.all { variant ->
         variant.javaCompiler.dependsOn(generateMirrorClassesList)
         variant.javaCompiler.dependsOn(generateMirrorMethodsList)
@@ -42,6 +45,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
     //noinspection GradleDependency
     compileOnly 'de.robv.android.xposed:api:53'
     compileOnly 'de.robv.android.xposed:api:53:sources'
@@ -95,5 +99,3 @@ task generateMirrorMethodsList() {
 task generateMirrorFieldsList() {
     generateMirrorList("Fields", "MirrorFields")
 }
-
-apply from: 'maven.gradle'
