--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,11 @@ buildscript {
         maven {
             url "https://maven.aliyun.com/repository/google"
         }
+        google()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
