--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName new Date().toLocaleString()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -34,8 +34,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
     implementation project(':lib')
     compileOnly 'de.robv.android.xposed:api:82'
 }
